--- a/src/DevoteeApp.css
+++ b/src/DevoteeApp.css
@@ -98,3 +98,9 @@
     justify-content: center;
     padding: 0;
 }
+
+.btn.active {
+    box-shadow: 0 0 0 2px red;
+    filter: brightness(0.92);
+    border: 2px solid red;
+}
