--- a/src/Login.css
+++ b/src/Login.css
@@ -1,15 +1,35 @@
 /* src/Login.css */
+
 .login-page {
-    min-height: 100vh;
-    background-image: url("../image/Radha madhav.jpeg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+        min-height: 100vh;
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+}
+
+.login-bg-half {
+        flex: 1;
+        background-image: url("../image/Radha madhav.jpeg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        min-height: 100vh;
 }
 
 .login-form-container {
     background-color: rgba(0, 0, 0, 0.6);
     width: 100%;
     max-width: 400px;
+}
+
+@media (max-width: 767px) {
+    .login-page {
+        flex-direction: column;
+    }
+    .login-bg-half {
+        min-height: 180px;
+        height: 180px;
+        width: 100vw;
+    }
 }
 
